fix: LANZ-3220 quotes all bash script parameters

--- a/action/action.yml
+++ b/action/action.yml
@@ -38,10 +38,10 @@ runs:
         ${{ github.action_path }}/../tfm-apply.sh \
           -r "${{ inputs.region }}" \
           -a "${{ inputs.access-key }}" \
-          -s ${{ inputs.secret-key }} \
-          -t ${{ inputs.terraform-folder }} \
-          -b ${{ inputs.backend-configuration }} \
-          -p ${{ inputs.terraform-plan-file }} \
-          -o ${{ inputs.terraform-outputs-file }} \
-          -n ${{ inputs.session-name }}
+          -s "${{ inputs.secret-key }}" \
+          -t "${{ inputs.terraform-folder }}" \
+          -b "${{ inputs.backend-configuration }}" \
+          -p "${{ inputs.terraform-plan-file }}" \
+          -o "${{ inputs.terraform-outputs-file }}" \
+          -n "${{ inputs.session-name }}"
       shell: bash
