fix: LANZ-3220 fix path to apply script

--- a/action.yml
+++ b/action.yml
@@ -35,7 +35,7 @@ runs:
   steps:
     - id: tfm-apply
       run: |
-        ${{ github.action_path }}/../tfm-apply.sh \
+        ${{ github.action_path }}/tfm-apply.sh \
           -r "${{ inputs.region }}" \
           -a "${{ inputs.access-key }}" \
           -s "${{ inputs.secret-key }}" \
